--- a/react-accordion-array/src/index.css
+++ b/react-accordion-array/src/index.css
@@ -99,6 +99,12 @@ p {
   margin-bottom: 1.25rem;
   color: var(--clr-grey-5);
 }
+.underline {
+  height: 0.05rem;
+  width: 100%;
+  background: var(--clr-grey-9);
+  margin: 5px auto;
+}
 @media screen and (min-width: 800px) {
   h1 {
     font-size: 4rem;
