--- a/react-accordion-array/src/index.css
+++ b/react-accordion-array/src/index.css
@@ -63,8 +63,8 @@ Global Styles
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background: var(--clr-purple);
-  color: var(--clr-grey-1);
+  background: var(--clr-grey-6);
+  color: var(clr-grey-6);
   line-height: 1.5;
   font-size: 0.875rem;
 }
